--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.6.14.Final</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
